calendar overflow issue fixed?

--- a/style.css
+++ b/style.css
@@ -127,7 +127,7 @@ figure {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+
 }
 
 .home-logo {
